--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-<meta http-equiv="refresh" content="0; url=http://dellei.github.io/WebsiteStart/index.html" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="cache-control" content="no-cache" />
+	<title>Websites</title>
+</head>
+
+<body id="index">
+	
+	<div id="website_list_container">
+		<div>Website 1 <span><a href="WebsiteStart/random_color_background.html">Random Background Color</a></span</div>
+	</div>
+</body>
+</html>
