--- a/WebsiteStart/random_color_background.html
+++ b/WebsiteStart/random_color_background.html
@@ -4,7 +4,8 @@
 	<meta charset="utf-8">
 	<title> Random Color Background </title>
 	
-	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+	<script type="text/javascript" src="js/random_background.js"></script>
 	
 </head>
 
