--- a/WebsiteStart/random_color_background.html
+++ b/WebsiteStart/random_color_background.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title> Random Color Background </title>
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/random_background.css">
 	
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/random_background.js"></script>
